# assembly-go-archive

./: .gitignore  .gitlab-ci.yml  .travis.yml  BUILD.bazel  COPYING  README.md  WORKSPACE  devserver.bzl  devserver.sh.tmpl  openssl-dgst-sign.bzl  openssl-dgst-sign.sh.tmpl
ci/: gitlab-ci.sh  travis-before-install-linux.sh  travis-ci.sh  travis-install.sh  update-binaries.sh
service/: BUILD.bazel  assembly-archive-launcher  assembly-archive-watcher.path.tmpl  assembly-archive-watcher.service.tmpl  assembly-archive.env  assembly-archive.service.tmpl  service.bzl
src/: BUILD.bazel  api.go  base.go  fileperm-windows.go  fileperm.go  main.go  server.go  site.go  state.go
static/: BUILD.bazel  static.bzl
static/css/: style.css
static/js/: archive.js
templates/: 404.html.tmpl  BUILD.bazel  breadcrumbs.html.tmpl  entry-metadata.html.tmpl  entry.html.tmpl  gallery.html.tmpl  layout.html.tmpl  main.html.tmpl  navbar.html.tmpl  section.html.tmpl  thumbnails.html.tmpl  year.html.tmpl  yearlynavigation.html.tmpl
test/: BUILD.bazel  api_test.go
