load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load(":devserver.bzl", "devserver")
load(":openssl-dgst-sign.bzl", "openssl_dgst_sign")

genrule(
    name = "assembly-archive-alias",
    srcs = ["//src:assembly-archive"],
    outs = ["assembly-archive"],
    cmd = """
ln -sf $(rootpath //src:assembly-archive) $@
""",
    executable = True,
)

pkg_tar(
    name = "assembly-archive-pkg",
    deps = [
        "//src:assembly-archive-pkg",
        "//static",
        "//templates",
    ],
)

devserver(
    name = "devserver",
    app = "//src:assembly-archive",
    static = "//static",
    templates = "//templates",
)

openssl_dgst_sign(
    name = "sign-pkg",
    src = ":assembly-archive-pkg",
)
