load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# go_library(
#     name = "go_default_library",
#     srcs = [
#         "foo.go",
#         "bar.go",
#     ],
#     deps = [
#         "//tools:go_default_library",
#         "@org_golang_x_utils//stuff:go_default_library",
#     ],
#     importpath = "github.com/example/project/foo",
#     visibility = ["//visibility:public"],
# )

go_library(
    name = "base",
    srcs = ["base.go"],
    importpath = "base",
    visibility = ["//test:__subpackages__"],
)

go_library(
    name = "state",
    srcs = ["state.go"],
    importpath = "state",
    deps = [":base"],
)

go_library(
    name = "api",
    srcs = ["api.go"],
    importpath = "api",
    visibility = ["//test:__subpackages__"],
    deps = [
        ":base",
        ":state",
    ],
)

go_library(
    name = "site",
    srcs = ["site.go"],
    importpath = "site",
    visibility = ["//test:__subpackages__"],
    deps = [
        ":base",
        ":state",
    ],
)

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "server",
    visibility = ["//test:__subpackages__"],
)

go_binary(
    name = "assembly-archive",
    srcs = ["main.go"],
    visibility = ["//visibility:public"],
    deps = [
        ":api",
        ":base",
        ":server",
        ":site",
    ],
)
