load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fileperm",
    srcs = ["fileperm.go", "fileperm-windows.go"],
    importpath = "fileperm",
)

go_library(
    name = "base",
    srcs = ["base.go"],
    importpath = "base",
    visibility = ["//test:__subpackages__"],
)

go_library(
    name = "state",
    srcs = ["state.go"],
    importpath = "state",
    deps = [":base"],
    visibility = ["//test:__subpackages__"],
)

go_library(
    name = "api",
    srcs = ["api.go"],
    importpath = "api",
    visibility = ["//test:__subpackages__"],
    deps = [
        ":base",
        ":state",
    ],
)

go_library(
    name = "site",
    srcs = ["site.go"],
    importpath = "site",
    visibility = ["//test:__subpackages__"],
    deps = [
        ":base",
        ":server",
        ":state",
    ],
)

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "server",
    visibility = ["//test:__subpackages__"],
    deps = [":fileperm"],
)

go_binary(
    name = "assembly-archive",
    srcs = ["main.go"],
    visibility = ["//visibility:public"],
    deps = [
        ":api",
        ":base",
        ":server",
        ":site",
        ":state",
    ],
)

pkg_tar(
    name = "assembly-archive-pkg",
    srcs = [":assembly-archive"],
    mode = "0755",
    visibility = ["//visibility:public"],
)
