load(":static.bzl", "yui_minified", "zopflipng_minified")

yui_minified(
    name = "allstyles-min.css",
    srcs = [
        "css/style.css",
        "css/reset.css",
        "css/960.css",
        "css/text.css"
    ],
)

yui_minified(
    name = "allscripts-min.js",
    srcs = [
        "js/archive.js",
        "js/jquery-1.6.2.min.js",
        "js/html5placeholder-1.01.jquery.min.js",
    ],
)

zopflipng_minified(
    name = "images-min",
    srcs = glob(["images/*.png"]),
)
