load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load(":static.bzl", "yui_minified", "zopflipng_minified")

yui_minified(
    name = "allstyles-min.css",
    srcs = [
        "css/960.css",
        "css/reset.css",
        "css/style.css",
        "css/text.css",
    ],
)

yui_minified(
    name = "allscripts-min.js",
    srcs = [
        "js/archive.js",
        "js/html5placeholder-1.01.jquery.min.js",
        "js/jquery-1.6.2.min.js",
    ],
)

# This rule is here to be able to minimize images that have been
# modified. You should distribute the minified images as long as there
# are no high resolution originals to convert.
zopflipng_minified(
    name = "images-min",
    srcs = glob(["images/*.png"]),
)

pkg_tar(
    name = "images-min-pkg",
    srcs = [":images-min"],
    strip_prefix = "/static/images-min/static/",
)

pkg_tar(
    name = "static",
    srcs = [
        ":allscripts-min.js",
        ":allstyles-min.css",
    ],
    package_dir = "static",
    visibility = ["//visibility:public"],
    deps = [":images-min-pkg"],
)
