load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "templates",
    srcs = [
        ":layout.html.tmpl",
        ":thumbnails.html.tmpl",
        ":main.html.tmpl",
        ":year.html.tmpl",
        ":section.html.tmpl",
        ":entry-metadata.html.tmpl",
        ":entry.html.tmpl",
    ],
    package_dir = "templates",
    visibility = ["//visibility:public"],
)
