load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "templates",
    srcs = [
        ":breadcrumbs.html.tmpl",
        ":entry-metadata.html.tmpl",
        ":entry.html.tmpl",
        ":layout.html.tmpl",
        ":main.html.tmpl",
        ":navbar.html.tmpl",
        ":section.html.tmpl",
        ":thumbnails.html.tmpl",
        ":year.html.tmpl",
    ],
    package_dir = "templates",
    visibility = ["//visibility:public"],
)
